<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="HaDevice_1" Id="{97657cef-2875-483c-bc13-6ed95dec3acc}">
    <Declaration><![CDATA[TYPE HaDevice_1 :
STRUCT
	status		:	REAL;
	sensor1		:	REAL;
	sensor2		:	REAL;
	sensor2024	:	REAL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>